plugins {
    id 'java'
    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
}

apply plugin: 'idea'

group 'org.example'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_16
    targetCompatibility = JavaVersion.VERSION_16
}

//compileJava {
//
//    options.compilerArgs += ['--enable-preview']
//}

repositories {
    mavenCentral()
}

sourceSets {
    main {
        java {
            srcDirs += "$buildDir/generated/sources/annotationProcessor/java/main"
        }

    }
}

dependencies {

    implementation 'org.hibernate:hibernate-core:5.6.5.Final'
    runtimeOnly 'org.postgresql:postgresql:42.3.2'
    implementation 'com.vladmihalcea:hibernate-types-55:2.14.0'
    implementation 'org.slf4j:slf4j-api:1.7.36'
    implementation 'org.slf4j:slf4j-log4j12:1.7.36'
    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'


    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.hibernate:hibernate-jpamodelgen:5.6.5.Final'

    implementation 'com.querydsl:querydsl-jpa:5.0.0'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0'

    testCompileOnly 'org.projectlombok:lombok:1.18.22'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    testImplementation 'org.assertj:assertj-core:3.22.0'
    testImplementation 'org.testcontainers:postgresql:1.16.3'

}

querydsl {
    jpa = true
    querydslSourcesDir = "$buildDir/generated/sources/annotationProcessor/java/main"

}


configurations {
    querydsl.extendsFrom implementation, testImplementation, compileOnly, runtimeOnly
}

compileQuerydsl {
    options.annotationProcessorPath = configurations.querydsl
}
compileQuerydsl.dependsOn(clean)

test {
    useJUnitPlatform()
}